Revert CSS overflow fix, made a real mess in some browsers.

--- a/share/webroot/css/form.css
+++ b/share/webroot/css/form.css
@@ -26,7 +26,6 @@
  	padding			: .5em;
  	position		: relative;
 	clear				: both;
-	overflow		: scroll;
 }
 
 .styled_form ul li ul
